<resources>
    <string name="app_name">TMDBMovie</string>

    <!--menu drawer item-->
    <string name="discover">Discover</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now playing</string>
    <string name="on_tv">On TV</string>
    <string name="airing_today">Airing Today</string>
    <string name="people">People</string>
    <string name="popular_people">Popular People</string>
    <string name="discussion">Discussion</string>
    <string name="in_theaters">In Theaters</string>
    <string name="overview">Overview</string>
    <string name="original_title">Original Title</string>
    <string name="original_language">Original Language</string>
    <string name="show_type">Show Type</string>
    <string name="show_status">Show Status</string>
    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="networks">Networks</string>
    <string name="created_by">Created By</string>
    <string name="homepage">Homepage</string>
    <string name="lopem">
        dsfdsfdsfdsfdsfsdddddddddddddddddddddddddsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssddddddddddddddddssssssssssssssssssssssssssssssssssssssssssssssssssssssssdsfdsfdsfdsfdsfsdddddddddddddddddddddddddsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssddddddddddddddddssssssssssssssssssssssssssssssssssssssssssssssssssssssssdsfdsfdsfdsfdsfsdddddddddddddddddddddddddsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssddddddddddddddddssssssssssssssssssssssssssssssssssssssssssssssssssssssssdsfdsfdsfdsfdsfsdddddddddddddddddddddddddsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssddddddddddddddddssssssssssssssssssssssssssssssssssssssssssssssssssssssssdsfdsfdsfdsfdsfsdddddddddddddddddddddddddsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssddddddddddddddddsssssssssssssssssssssssssssssssssssssssssssssssssssssssshhhhh
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
