<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="show" type="com.android.tmdb.movie.degea9.data.database.entity.TvShowDetail"/>
    </data>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#595b5a"
            android:padding="16dp"
            tools:context=".ui.showdetail.ActorsFragment">


        <TextView
                android:text="@string/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overviewText"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
        <TextView
                android:text="@{show.overview}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvOverview"
                app:layout_constraintTop_toBottomOf="@+id/overviewText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/original_title"
                    style="@style/facts_title"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{show.originalName}"
                    style="@style/facts_content"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/original_language"
                    style="@style/facts_title"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{show.originalLanguage}"
                    style="@style/facts_content"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/show_type"
                        android:layout_weight="1"
                        style="@style/facts_title"
                />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/show_status"
                        android:layout_weight="1"
                        style="@style/facts_title"
                />


            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{show.type}"
                        style="@style/facts_content"
                />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{show.status}"
                        style="@style/facts_content"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/first_air_date"
                        android:layout_weight="1"
                        style="@style/facts_title"
                />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/last_air_date"
                        android:layout_weight="1"
                        style="@style/facts_title"
                />

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{show.firstAirDate}"
                        style="@style/facts_content"
                />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{show.lastAirDate}"
                        style="@style/facts_content"
                />

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/networks"
                    style="@style/facts_title"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/created_by"
                    style="@style/facts_title"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homepage"
                    style="@style/facts_title"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{show.homepage}"
                    style="@style/facts_content"
            />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>